--- a/guiProjekt/lang/loc/dede.json
+++ b/guiProjekt/lang/loc/dede.json
@@ -14,5 +14,13 @@
                 "functionality": "Funktionalität"
             }
         }
+    },
+
+    "body": {
+        "home": {
+            "title": "Prog. Graph Oberflächen",
+            "description": "Auf dieser Webseite geht es um Mehrsprachigkeit. Wir werden euch erklären , wie man eine Applikation mit mehr Sprachen umsetzten kann.",
+            "buttonText": "Code Source Herunterladen"
+        }
     }
 }
