--- a/guiProjekt/lang/loc/dede.json
+++ b/guiProjekt/lang/loc/dede.json
@@ -21,6 +21,27 @@
             "title": "Prog. Graph Oberflächen",
             "description": "Auf dieser Webseite geht es um Mehrsprachigkeit. Wir werden euch erklären , wie man eine Applikation mit mehr Sprachen umsetzten kann.",
             "buttonText": "Code Source Herunterladen"
+        },
+        "faq": {
+            "title": "Introduction <span>Mehrsprachigkeit</span>",
+            "questions": [
+                {
+                    "title": "Definition",
+                    "answer": "1Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore."
+                },
+                {
+                    "title": "Wie kann ich mehr als eine Sprache in meiner Appl umsetzten ?",
+                    "answer": "2Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore."
+                },
+                {
+                    "title": "Vorteile",
+                    "answer": "3Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore."
+                },
+                {
+                    "title": "Nachteile",
+                    "answer": "4Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore."
+                }
+            ]
         }
     }
 }
