Mehrsprachigfied sections/download

--- a/guiProjekt/lang/loc/dede.json
+++ b/guiProjekt/lang/loc/dede.json
@@ -68,6 +68,21 @@
             "title": "Mehr<span>sprachigkeit</span>",
             "description": "Diese Webseite wurde als Projekt für Prog.Graph Oberflächen bei Herr König entwickelt um die Studiereden zu helfen,<br>wie man eine Applikation mit meherern Sprachen entwicklen kann.<br>Hier kann man sehen,was wir alles für diese Applikation benutzt haben."
         },
+        "downloads": {
+            "title": "App <span>herunterladen</span>",
+            "github": {
+                "title": "GitHub",
+                "description": ""
+            },
+            "winzip": {
+                "title": "Windows-Zip",
+                "description": ""
+            },
+            "linux": {
+                "title": "Linux",
+                "description": ""
+            }
+        },
         "team": {
             "title": "Team<span>mitglieder</span>",
             "labels": {
