Mehrsprachigfied sections/functionality

--- a/guiProjekt/lang/loc/dede.json
+++ b/guiProjekt/lang/loc/dede.json
@@ -83,6 +83,27 @@
                 "description": ""
             }
         },
+        "functionality": {
+            "title": "Wie <span>funktionierts?</span>",
+            "steps": {
+                "1": {
+                    "title": "Herunterladen",
+                    "description": "Zuerst musst ihr das Projekt auf dem Link daoben herunterladen oder einfach hier drücken."
+                },
+                "2": {
+                    "title": "Verzeichnis auswählen",
+                    "description": "Wie ihr sieht, wir haben mehrere Applikation im Projekt . Ihr müsst euch entscheiden,was für eine Applikationart ihr die Mehrsprachigkeit umsetzten möchten [ Mobile - Web ]."
+                },
+                "3": {
+                    "title": "Projekt öffnen",
+                    "description": "Projekt öffnen mit einem passenden IDE."
+                },
+                "4": {
+                    "title": "Code kopieren",
+                    "description": "Jetzt könnt ihr den Code einfach kopieren und in eure Apps hinzüfugen und dann die in anderen Sprachen die eure Anwendungen übersetzten."
+                }
+            }
+        },
         "team": {
             "title": "Team<span>mitglieder</span>",
             "labels": {
