--- a/guiProjekt/lang/loc/dede.json
+++ b/guiProjekt/lang/loc/dede.json
@@ -1,6 +1,6 @@
 {
     "head": {
-        "title": "::.. Mehrsprachigkeit Projekt ..::",
+        "title": "Mehrsprachigkeit - Leon Etienne | Issam Charef",
 
         "navbar": {
             "title": "Mehrsprachigkeit",
@@ -8,7 +8,7 @@
                 "home": "Home",
                 "intro": "Einführung",
                 "examples": "Beispiele",
-                "project": "Project",
+                "project": "Projekt",
                 "screenshots": "Screenshots",
                 "download": "Herunterladen",
                 "functionality": "Funktionalität"
@@ -19,27 +19,27 @@
     "body": {
         "home": {
             "title": "Prog. Graph Oberflächen",
-            "description": "Auf dieser Webseite geht es um Mehrsprachigkeit. Wir werden euch erklären , wie man eine Applikation mit mehr Sprachen umsetzten kann.",
-            "buttonText": "Code Source Herunterladen"
+            "description": "Auf dieser Webseite geht es um Mehrsprachigkeit. Wir werden euch erklären, wie eine Applikation mit mehreren Sprachen umgesetzt werden kann.",
+            "buttonText": "Sourcecode herunterladen"
         },
         "faq": {
-            "title": "Introduction <span>Mehrsprachigkeit</span>",
+            "title": "Einführung <span>Mehrsprachigkeit</span>",
             "questions": [
                 {
                     "title": "Definition",
-                    "answer": "1Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore."
+                    "answer": "Mehrsprachigkeit ist die Fähigkeit eines Menschen, mit mehr als einer Sprache umzugehen.<br>In der Informatik beschreibt sie das Arbeiten mit mehreren Sprachen innerhalb einer Anwendung."
                 },
                 {
-                    "title": "Wie kann ich mehr als eine Sprache in meiner Appl umsetzten ?",
-                    "answer": "2Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore."
+                    "title": "Implementation",
+                    "answer": "Grundsätzlich gibt es einige verschiedene Ansätze mit ihren individuellen Vor- und Nachteilen. Wann man welche Methode wie anwendet ist in unserer <a href='' target='_blank'>schriftlichen Ausarbeitung</a> ausführlich behandelt worden."
                 },
                 {
                     "title": "Vorteile",
-                    "answer": "3Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore."
+                    "answer": "Eine mehrsprachige Applikation bietet eine großes Spektrum an Vorteilen gegenüber einer einsprachigen Anwendung. Diese sind beispielsweise eine größere, diversere Zielgruppe.<br>Insbesondere bei internationalen Unternehmen ist eine internationale Internetpräsenz unablässlich.<br>Vor allem bei ContentManagentSystemen, wie zum Beispiel <a href='https://typo3.org/' target='_blank'>TYPO3</a> ist eine Integration mehrerer Lokalisierungen oftmals trivial, da es nativ unterstützt wird."
                 },
                 {
                     "title": "Nachteile",
-                    "answer": "4Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod<br>tempor invidunt ut labore."
+                    "answer": "Die Integration eines Mehrsprachigkeitsframeworkes ist oftmals mit viel Aufwand, und somit hohen Kosten, verbunden. Wenn das Produkt ohnehin nur für eine einsprachige Zielgruppe bestimmt ist, lohnt sich dieses Umfangen eventuell nicht."
                 }
             ]
         },
