Schriftliche Überarbeitung Projekt

--- a/guiProjekt/lang/loc/dede.json
+++ b/guiProjekt/lang/loc/dede.json
@@ -66,7 +66,7 @@
         },
         "project": {
             "title": "Mehr<span>sprachigkeit</span>",
-            "description": "Diese Webseite wurde als Projekt für Prog.Graph Oberflächen bei Herr König entwickelt um die Studiereden zu helfen,<br>wie man eine Applikation mit meherern Sprachen entwicklen kann.<br>Hier kann man sehen,was wir alles für diese Applikation benutzt haben."
+            "description": "Diese Webseite wurde als Prüfleistung für den Kurs 505 - Programmieren Graphischer Oberflächen unter Führung durch Herrn Professor Dr. König entwickelt, um der gesamten Komilitonenschaft des Kursmodules die Grundlagen der Mehrsprachigkeit in der Informatik nahe zu bringen."
         },
         "downloads": {
             "title": "App <span>herunterladen</span>",
