--- a/guiProjekt/lang/loc/dede.json
+++ b/guiProjekt/lang/loc/dede.json
@@ -20,7 +20,10 @@
         "home": {
             "title": "Prog. Graph Oberflächen",
             "description": "Auf dieser Webseite geht es um Mehrsprachigkeit. Wir werden euch erklären, wie eine Applikation mit mehreren Sprachen umgesetzt werden kann.",
-            "buttonText": "Sourcecode herunterladen"
+            "buttonText": "Sourcecode herunterladen",
+            "images": {
+                "smartphone": "/images/deutsch.png"
+            }
         },
         "faq": {
             "title": "Einführung <span>Mehrsprachigkeit</span>",
